--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "package": "svelte-kit package",
-    "preview": "svelte-kit preview"
+    "preview": "svelte-kit preview",
+    "lint:check": "npx eslint *.js --ignore-path .gitignore --no-error-on-unmatched-pattern",
+    "lint:fix": "npx eslint --fix *.js --ignore-path .gitignore --no-error-on-unmatched-pattern",
+    "format:check": "npx prettier --check . --ignore-path .gitignore --no-error-on-unmatched-pattern",
+    "format:fix": "npx prettier --write . --ignore-path .gitignore --no-error-on-unmatched-pattern"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "^1.0.0-next.198",
+    "prettier": "^2.5.1",
     "svelte": "^3.44.0"
   },
   "type": "module",
