--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     },
     "type": "module",
     "dependencies": {
+        "@sveltejs/adapter-auto": "next",
+        "@sveltejs/kit": "^1.0.0-next.198",
         "@auth0/auth0-spa-js": "^1.19.3",
         "babel-eslint": "^10.1.0",
         "sv-bootstrap-modal": "^1.0.3",
